--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,3 +5,7 @@ services:
       context: ./goodbye_world
     ports:
       - 8081:5000
+    environment:
+      - FLASK_APP=app.py
+      - FLASK_RUN_HOST=0.0.0.0:8081
+      - FLASK_RUN_PORT=5000
